--- a/app/index.html
+++ b/app/index.html
@@ -105,6 +105,7 @@
   <script src="scripts/stencils/external/bot.js"></script>
   <script src="scripts/stencils/external/human-user.js"></script>
   <script src="scripts/stencils/external/server.js"></script>
+  <script src="scripts/stencils/external/intserver.js"></script>
   <script src="scripts/stencils/external/service.js"></script>
     <!-- Process -->
   <script src="scripts/stencils/process/base-process.js"></script>
